Remove % string call and simplify Seekbar code in NotificationFragment
Change-Id: Ieb744d2a88c4f88d9bb7593e4236281a55b293af

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -86,7 +86,7 @@
         android:max="25"
         aicpextras:min="0"
         aicpextras:unitsLeft=""
-        aicpextras:unitsRight="@string/unit_percent"
+        aicpextras:unitsRight="%"
         android:persistent="false" />
 
         <net.margaritov.preference.colorpicker.ColorPickerPreference
@@ -107,7 +107,7 @@
          android:max="100"
          aicpextras:min="0"
          aicpextras:unitsLeft=""
-         aicpextras:unitsRight="@string/unit_percent"
+         aicpextras:unitsRight="%"
          android:persistent="false"
          android:dependency="status_bar_custom_header" />
 
