AE: Halo settings part
Brought from Settings into AicpExtras

Change-Id: I1a7789f71b25aff3a98df0ff536748377150cbda

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -34,6 +34,11 @@
                 android:icon="@drawable/ic_multishit"
                 android:title="@string/multishit_title" />
             <item
+                android:id="@+id/nav_halo"
+                android:checkable="true"
+                android:icon="@drawable/ic_opacity"
+                android:title="@string/halo_settings_title" />
+            <item
                 android:id="@+id/nav_transparency_porn"
                 android:checkable="true"
                 android:icon="@drawable/ic_opacity"
