Fix AE subsettings styled colors from PreferenceTheme
Change-Id: I27294f39a247576b1e3816e125c46b846a8f81cf

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -35,9 +35,9 @@
 
     <!-- Preference fragment -->
     <style name="PreferenceTheme" parent="">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
         <item name="android:windowActionBar">true</item>
         <item name="android:windowNoTitle">false</item>
     </style>
