HALO: Floating mode notifications toggle[2/2]
AICPfy:
- Add dependency to other Preference
- Use proper Switch preference (Secure)

Change-Id: Ic59d8ef7f458a4d65fe3776a984f81df7af24d51
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/res/xml/halo_settings.xml
+++ b/res/xml/halo_settings.xml
@@ -29,13 +29,15 @@ limitations under the License.
         android:title="@string/halo_size_title"
         android:summary="@string/halo_size_summary"
         android:entries="@array/entries_halo_size"
-        android:entryValues="@array/values_halo_size" />
+        android:entryValues="@array/values_halo_size"
+        android:dependency="halo_enable" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="halo_hide"
         android:title="@string/halo_hide_title"
         android:summary="@string/halo_hide_summary"
-        android:defaultValue="false" />
+        android:defaultValue="false"
+        android:dependency="halo_enable" />
 
     <ListPreference
         android:key="halo_notify_count"
@@ -43,13 +45,22 @@ limitations under the License.
         android:title="@string/halo_notification_count_title"
         android:summary="@string/halo_notification_count_summary"
         android:entries="@array/entries_halo_notification_count"
-        android:entryValues="@array/values_halo_notification_count" />
+        android:entryValues="@array/values_halo_notification_count"
+        android:dependency="halo_enable" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
+        android:key="halo_float_notifications"
+        android:title="@string/halo_floating_notifications_title"
+        android:summary="@string/halo_floating_notifications_summary"
+        android:defaultValue="false"
+        android:dependency="halo_enable" />
+
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="halo_msgbox"
         android:title="@string/halo_notification_msgbox_title"
         android:summary="@string/halo_notification_msgbox_summary"
-        android:defaultValue="true" />
+        android:defaultValue="true"
+        android:dependency="halo_enable" />
 
     <ListPreference
         android:key="halo_msgbox_animation"
@@ -57,17 +68,20 @@ limitations under the License.
         android:title="@string/halo_msgbox_animation_title"
         android:summary="@string/halo_msgbox_animation_summary"
         android:entries="@array/entries_halo_msgbox_animation"
-        android:entryValues="@array/values_halo_msgbox_animation" />
+        android:entryValues="@array/values_halo_msgbox_animation"
+        android:dependency="halo_enable" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="halo_pause"
         android:title="@string/halo_pause_title"
-        android:summary="@string/halo_pause_summary" />
+        android:summary="@string/halo_pause_summary"
+        android:dependency="halo_enable" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
         android:key="halo_unlock_ping"
         android:title="@string/halo_unlock_ping_title"
         android:summary="@string/halo_unlock_ping_summary"
-        android:defaultValue="false" />
+        android:defaultValue="false"
+        android:dependency="halo_enable" />
 
 </PreferenceScreen>
