Blur: move Blur settings to a nav drawer item (WIP)
needs icon only

Change-Id: I55ba56d047e82955fdcc1fe51a0007cdfd500fd5

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -44,6 +44,11 @@
                 android:icon="@drawable/ic_opacity"
                 android:title="@string/transparency_porn_title" />
             <item
+                android:id="@+id/nav_blur_ui"
+                android:checkable="true"
+                android:icon="@drawable/ic_opacity"
+                android:title="@string/nav_blur_ui_title" />
+            <item
                 android:id="@+id/nav_various"
                 android:checkable="true"
                 android:icon="@drawable/ic_various_shit"
