--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -148,7 +148,7 @@
             android:max="255"
             aicpextras:min="0"
             aicpextras:unitsLeft=""
-            aicpextras:unitsRight="%"
+            aicpextras:unitsRight=""
             aicpextras:defaultVal="51"
             android:persistent="false" />
 
