--- a/res/xml/blur_ui.xml
+++ b/res/xml/blur_ui.xml
@@ -62,7 +62,8 @@
             android:key="translucent_notifications_pref"
             android:title="@string/translucent_notifications_pref"
             android:summary="@string/translucent_notifications_pref_summary"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            android:dependency="blurred_status_bar_expanded_enabled_pref" />
 
         <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
             android:key="notifications_transluency"
@@ -81,7 +82,8 @@
             android:key="translucent_header_pref"
             android:title="@string/translucent_header_pref"
             android:summary="@string/translucent_header_pref_summary"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            android:dependency="blurred_status_bar_expanded_enabled_pref" />
 
         <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
             android:key="header_transluency"
@@ -100,7 +102,8 @@
             android:key="translucent_quick_settings_pref"
             android:title="@string/translucent_quick_settings_pref"
             android:summary="@string/translucent_quick_settings_pref_summary"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            android:dependency="blurred_status_bar_expanded_enabled_pref" />
 
         <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
             android:key="quick_settings_transluency"
