--- a/res/xml/blur_ui.xml
+++ b/res/xml/blur_ui.xml
@@ -113,4 +113,16 @@
             android:dependency="translucent_quick_settings_pref"
             aicpextras:defaultValue="60" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="blur_recents_cat"
+        android:title="@string/blur_recents_cat" >
+
+      <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+         android:key="blurred_recent_app_enabled_pref"
+         android:title="@string/blurred_recent_app_enabled_pref"
+         android:summary="@string/blurred_recent_app_enabled_pref_summary"
+         android:defaultValue="false"
+         android:dependency="blurred_status_bar_expanded_enabled_pref" />
+    </PreferenceCategory>
 </PreferenceScreen>
