--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -10,6 +10,12 @@
         android:summaryOff="@string/su_indicator_summary_off"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="show_fourg"
+        android:title="@string/show_fourg_title"
+        android:summary="@string/show_fourg_summary"
+        android:defaultValue="false" />
+
     <!-- Headset icon switch -->
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="show_headset_icon"
