--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -23,6 +23,12 @@
         android:summary="@string/show_headset_icon_summary"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="show_zen_icon"
+        android:title="@string/show_zen_icon_title"
+        android:summary="@string/show_zen_icon_summary"
+        android:defaultValue="true" />
+
     <Preference
         android:key="batterybar"
         android:title="@string/battery_bar_title" />
