Add LCD density setting (SQUASH)
It includes these patches:
CyanogenMod/android_packages_apps_Settings@804fefa
CyanogenMod/android_packages_apps_Settings@d24c204
CyanogenMod/android_packages_apps_Settings@4d9c12c

AICPfy:
FWB part is already in, so
bring it into AicpExtras
Also add needed permissions to manifest:
SHUTDOWN
MANAGE_APP_TOKENS
SET_ACTIVITY_WATCHER
WAKE_LOCK
READ_FRAME_BUFFER
GET_APP_OPS_STATS
ACCESS_WIFI_STATE

AICP N changes:
We already had all the strings in

Change-Id: I3d55615127cc735ea0443d519520d0cb6cfbfb38

--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -10,6 +10,11 @@
     <PreferenceCategory
         android:title="@string/Misc">
 
+        <ListPreference
+            android:key="lcd_density"
+            android:title="@string/lcd_density"
+            android:persistent="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
