Toast icon switch [1/2]
Bring it to N.
We already have strings

Change-Id: I59ffd10f20a2ae9491f76380ec9af641e0844928

--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -15,6 +15,11 @@
             android:title="@string/lcd_density"
             android:persistent="false" />
 
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="toast_icon"
+            android:title="@string/toast_icon_title"
+            android:summary="@string/toast_icon_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
