Add settings part of brightness slider switch
We already have strings
Add dynamic summary for Brighthness slider setting

Change-Id: If87d0fc97ac53a18e16c1e1ed0cd5891d1456acb

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -21,6 +21,12 @@
         android:key="quicksettings_tiles_category"
         android:title="@string/quicksettings_tiles_category">
 
+    <SwitchPreference
+        android:key="qs_show_brightness_slider"
+        android:title="@string/qs_brightness_slider_title"
+        android:persistent="false"
+        android:defaultValue="true" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
