--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -27,6 +27,13 @@
         android:persistent="false"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="brightness_icon"
+        android:title="@string/brightness_icon_title"
+        android:summary="@string/brightness_icon_summary"
+        android:dependency="qs_show_brightness_slider"
+        android:defaultValue="true"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
