--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -21,9 +21,11 @@
         android:key="quicksettings_tiles_category"
         android:title="@string/quicksettings_tiles_category">
 
-    <SwitchPreference
-        android:key="qs_show_brightness_slider"
+    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
+        android:key="qs_show_brightness"
         android:title="@string/qs_brightness_slider_title"
+        android:summaryOn="@string/qs_brightness_slider_enabled"
+        android:summaryOff="@string/qs_brightness_slider_disabled"
         android:persistent="false"
         android:defaultValue="true" />
 
@@ -31,7 +33,7 @@
         android:key="brightness_icon"
         android:title="@string/brightness_icon_title"
         android:summary="@string/brightness_icon_summary"
-        android:dependency="qs_show_brightness_slider"
+        android:dependency="qs_show_brightness"
         android:defaultValue="true"/>
 
     </PreferenceCategory>
