--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -56,6 +56,12 @@
         android:entryValues="@array/qs_tile_animation_interpolator_values"
         android:persistent="false" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
