AE: Ability to hide superuser status bar icon [2/2]
AICPfy:
- False by default

Change-Id: I2da70a5b8dd94791f289504164d8e38326e71c6d
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -4,6 +4,13 @@
     <PreferenceCategory
         android:title="@string/indicators">
 
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="show_su_indicator"
+            android:title="@string/su_indicator"
+            android:summaryOn="@string/su_indicator_summary_on"
+            android:summaryOff="@string/su_indicator_summary_off"
+            android:defaultValue="false" />
+
    </PreferenceCategory>
 
    <!-- Status bar AICP logo -->
