Add back network traffic settings
Revert removing network traffic settings during
https://github.com/AICP/packages_apps_AicpExtras/commit/c6eb3230250de7d6e6e8e4c1f6ad201f98be9bbd

Change-Id: Ibbd8b2d3d648afa541b79f309d51c2efd779bb66

--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -11,6 +11,9 @@
             android:summaryOff="@string/su_indicator_summary_off"
             android:defaultValue="false" />
 
+        <Preference
+            android:key="traffic"
+            android:title="@string/traffic_category" />
    </PreferenceCategory>
 
    <!-- Status bar AICP logo -->
