Add back LockscreenFragment to nav drawer
Change-Id: I2d8c019c9550886b866a43f505bb9fb97b35520e

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -18,6 +18,11 @@
                 android:checkable="true"
                 android:icon="@drawable/ic_notif"
                 android:title="@string/notificaitons_title" />
+            <item
+                android:id="@+id/nav_lockscreen"
+                android:checkable="true"
+                android:icon="@drawable/ic_lockscreen"
+                android:title="@string/lockscreen_title" />
         </menu>
     </item>
 
