AE: Fix PreferenceTheme (make it dark again)
Change-Id: Ib9bb4c6f77d6282df98b2cd406118f9fcc189aea

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -34,7 +34,7 @@
     </style>
 
     <!-- Preference fragment -->
-    <style name="PreferenceTheme" parent="">
+    <style name="PreferenceTheme" parent="Theme.AppCompat">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
