--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -23,6 +23,11 @@
                 android:checkable="true"
                 android:icon="@drawable/ic_lockscreen"
                 android:title="@string/lockscreen_title" />
+            <item
+                android:id="@+id/nav_transparency_porn"
+                android:checkable="true"
+                android:icon="@drawable/ic_opacity"
+                android:title="@string/transparency_porn_title" />
         </menu>
     </item>
 
