--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -5,6 +5,15 @@
     <PreferenceCategory
         android:title="@string/anim">
 
+        <ListPreference
+            android:key="power_menu_animations"
+            android:title="@string/power_menu_animation_title"
+            android:dialogTitle="@string/power_menu_animation_dialog_title"
+            android:entries="@array/power_menu_animations_entries"
+            android:entryValues="@array/power_menu_animations_values"
+            android:summary="@string/power_menu_animation_summary"
+            android:persistent="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
