Add back VariousShitFragment and:
AE: launch default music player on headset connect [1/2]

We already had strings, so only xml file change
http://gerrit.aicp-rom.com/#/c/19397/

Change-Id: Id09065638f1279423ceedef87da1a2edf19f46f4

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -28,6 +28,11 @@
                 android:checkable="true"
                 android:icon="@drawable/ic_opacity"
                 android:title="@string/transparency_porn_title" />
+            <item
+                android:id="@+id/nav_various"
+                android:checkable="true"
+                android:icon="@drawable/ic_various_shit"
+                android:title="@string/various_shit_title" />
         </menu>
     </item>
 
