AE: Double tap to sleep anywhere on the lock screen (2/2)
Strings are already in

Change-Id: I4aed42164ca21255224d504c55ead173b5827578

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_anywhere"
+        android:title="@string/double_tap_sleep_anywhere_title"
+        android:summary="@string/double_tap_sleep_anywhere_summary" />
+
     <PreferenceCategory
         android:title="@string/Misc">
 
