--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -78,6 +78,11 @@
     <PreferenceCategory
         android:title="@string/Misc">
 
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="disable_immersive_message"
+            android:title="@string/disable_immersive_message_title"
+            android:summary="@string/disable_immersive_message_summary" />
+
       </PreferenceCategory>
 
 </PreferenceScreen>
