--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -11,6 +11,12 @@
             android:summaryOff="@string/su_indicator_summary_off"
             android:defaultValue="false" />
 
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg"
+            android:title="@string/show_fourg_title"
+            android:summary="@string/show_fourg_summary"
+            android:defaultValue="false" />
+
         <Preference
             android:key="traffic"
             android:title="@string/traffic_category" />
