--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -9,4 +9,11 @@
         android:summary="@string/headset_connect_player_summary"
         android:defaultValue="false" />
 
+    <!-- Screenshot tone -->
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="screenshot_sound"
+        android:title="@string/screenshot_sound_title"
+        android:summary="@string/screenshot_sound_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
