AE - XuiMod: Toast Animations [2/2]
AICPfy:
- We already had strings
- Added toast test

Change-Id: Id6ef51286fcaa88e60ace6daae5a14301fac2aae

--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -14,6 +14,13 @@
             android:summary="@string/power_menu_animation_summary"
             android:persistent="false" />
 
+        <ListPreference
+            android:key="toast_animation"
+            android:title="@string/toast_animation_title"
+            android:entries="@array/toast_animation_entries"
+            android:entryValues="@array/toast_animation_values"
+            android:persistent="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
