Add back battery bar settings
Revert removal of battery bar settings during
https://github.com/AICP/packages_apps_AicpExtras/commit/c6eb3230250de7d6e6e8e4c1f6ad201f98be9bbd

Disable navigation bar location entries for now, let's wait for DUI

Change-Id: Ia5647e85ce353db86f05f5ca0d35bd1aa1242415

--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -18,6 +18,10 @@
             android:defaultValue="false" />
 
         <Preference
+            android:key="batterybar"
+            android:title="@string/battery_bar_title" />
+
+        <Preference
             android:key="traffic"
             android:title="@string/traffic_category" />
    </PreferenceCategory>
