AE: AE custom summary in Settings app (2/3)
Change-Id: I793510410a260da35d9fb83add193b8053edc921

--- a/res/xml/settings_layout.xml
+++ b/res/xml/settings_layout.xml
@@ -61,6 +61,10 @@
         android:defaultValue="@color/navDrawerText"
         android:dependency="ae_custom_colors" />
 
+    <PreferenceScreen
+        android:key="ae_settings_summary"
+        android:title="@string/ae_settings_summary_title" />
+
     <Preference
         android:key="ae_settings_restore_defaults"
         android:title="@string/ae_settings_restore_defaults_title" />
