--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -16,4 +16,9 @@
         android:summary="@string/screenshot_sound_summary"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="disable_immersive_message"
+        android:title="@string/disable_immersive_message_title"
+        android:summary="@string/disable_immersive_message_summary" />
+
 </PreferenceScreen>
