Make advanced qs data tile not show up on 'Wifi Only' devices
- This made no sense to have on Wifi only devices since
they don't have a data tile.

Change-Id: I370aadd11995459725448d26ca74e8681188b65e

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -41,7 +41,7 @@
         android:summary="@string/quick_settings_vibrate_summary"
         android:defaultValue="false"/>
 
-    <com.lordclockan.aicpextras.preferences.SecureSettingSwitchPreference
+    <SwitchPreference
         android:key="qs_data_advanced"
         android:title="@string/qs_advanced_data_title"
         android:summary="@string/qs_advanced_data_summary"
