Settings: The Return of the Ticker 1/2
AICPfy:
- Completely rewritten to go with AICP extras
so giving my self authorship

Change-Id: Ia8c3dff1a30f9106032b8dca0fcd9b4d5455ef4f

--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -28,7 +28,11 @@
         <Preference
             android:key="carrierlabel"
             android:title="@string/carrier_options" />
-            
+
+        <Preference
+            android:key="ticker"
+            android:title="@string/ticker_screen_title" />
+
    </PreferenceCategory>
 
    <!-- Status bar AICP logo -->
