--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -872,4 +872,15 @@
         <item>7</item>
     </string-array>
 
+    <!-- Screenshot type  -->
+    <string-array name="screenshot_type_entries">
+        <item>@string/screenshot_type_fullscreen</item>
+        <item>@string/screenshot_type_partial</item>
+    </string-array>
+
+    <string-array name="screenshot_type_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
