--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -16,6 +16,12 @@
         android:summary="@string/screenshot_sound_summary"
         android:defaultValue="true" />
 
+    <ListPreference
+        android:entries="@array/screenshot_type_entries"
+        android:entryValues="@array/screenshot_type_values"
+        android:key="screenshot_type"
+        android:title="@string/screenshot_type_title" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="disable_immersive_message"
         android:title="@string/disable_immersive_message_title"
