[1/2] Settings: show charging current & voltage on lockscreen
Thanx to ezio84 for the switch ;)

Change-Id: Ia9391311e2e848b90f67045975018ba34c148e03
Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -18,6 +18,12 @@
         android:summary="@string/lockscreen_qs_disabled_summary"
         android:defaultValue="false" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_charging_current"
+        android:title="@string/lockscreen_charging_current_title"
+        android:summary="@string/lockscreen_charging_current_summary"
+        android:defaultValue="false" />
+
     <PreferenceCategory
         android:title="@string/Misc"
         android:key="lockscreen_misc_category">
