AE: Lock screen AM/PM switch (2/2)
Change-Id: I41075103a61b96fe3628ca99d43e6cd29789c549

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -16,6 +16,13 @@
         android:title="@string/Misc">
 
         <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="lock_screen_hide_ampm"
+            android:title="@string/lock_screen_hide_ampm_title"
+            android:summaryOn="@string/lock_screen_hide_ampm_summary_on"
+            android:summaryOff="@string/lock_screen_hide_ampm_summary_off"
+            android:defaultValue="false" />
+
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
             android:key="keyguard_toggle_torch"
             android:title="@string/keyguard_torch_title"
             android:summary="@string/keyguard_torch_summary"
