AE: slight cleanup
*don't show preference categories that are not yet filled

Change-Id: Iebea814abf8ac3f6bc897fa1d5ee234416e8cab5

--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -66,10 +66,10 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory
+    <!--PreferenceCategory
         android:key="breathing_notifications_category"
         android:title="@string/breathing_notifications_category" >
 
-    </PreferenceCategory>
+    </PreferenceCategory-->
 
 </PreferenceScreen>
