--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -94,10 +94,10 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory
+    <!--PreferenceCategory
         android:title="@string/header_tweaks">
 
-    </PreferenceCategory>
+    </PreferenceCategory-->
 
     <PreferenceCategory
         android:title="@string/Misc">
