--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -47,6 +47,12 @@
         android:summary="@string/qs_advanced_data_summary"
         android:defaultValue="false" />
 
+    <SwitchPreference
+        android:key="qs_tile_title_visibility"
+        android:title="@string/qs_menu_item_titles"
+        android:summary="@string/qs_menu_item_titles_summary"
+        android:defaultValue="false" />
+
     <ListPreference
         android:key="sysui_qqs_count_key"
         android:title="@string/sysui_qqs_count_title"
