--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -4,6 +4,11 @@
     xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras">
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="config_use_round_icon"
+        android:title="@string/prefer_round_icons_title"
+        android:summary="@string/prefer_round_icons_summary" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="headset_connect_player"
         android:title="@string/headset_connect_player_title"
         android:summary="@string/headset_connect_player_summary"
