AE: Set correct strings to change-hostname feature
* Fix for https://github.com/AICP/packages_apps_AicpExtras/commit/85eb38d2f87414bf1f8da55c6dcf1ef517357b4d
* various_layout.xml: ga_rename_action and ga_cancel_action is not used on n7.1 (will be removed on another commit)
* HostnamePreference.java: Fix project name

Change-Id: I3c3c403821f6fc91b8276807b7e1fca8287540cc
Signed-off-by: lindwurm <admin@lindwurm.biz>

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -38,8 +38,8 @@
         android:key="device_hostname"
         android:title="@string/device_hostname"
         android:dialogTitle="@string/device_hostname"
-        android:positiveButtonText="@string/ga_rename_action"
-        android:negativeButtonText="@string/ga_cancel_action"
+        android:positiveButtonText="@string/ok"
+        android:negativeButtonText="@string/cancel"
         android:selectAllOnFocus="true"
         android:imeOptions="actionDone"
         android:inputType="textNoSuggestions"
