Add three-fingers-swipe to screenshot [1/2]
Change-Id: I3c014bdab93274dee616f4144a14ed7922cf6fde

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -21,6 +21,13 @@
         android:title="@string/disable_immersive_message_title"
         android:summary="@string/disable_immersive_message_summary" />
 
+    <!-- Three finger screenshot -->
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="three_finger_gesture"
+        android:title="@string/three_finger_gesture"
+        android:summary="@string/three_finger_gesture_summary"
+        android:defaultValue="false" />
+
     <!-- Screenshot tone -->
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="screenshot_sound"
